--- a/app/views/slurrystorage/current/planning-required-condition.html
+++ b/app/views/slurrystorage/current/planning-required-condition.html
@@ -25,10 +25,10 @@
           You may be able to apply for this scheme
         </h1>
 
-        <p>Any planning permission must be in place by 28 June 2024.</p>
+        <p>You must have secured planning permission before you submit a full application.</p>
 
             <form class="form" action="{{ nextUrl }}" method="post">
-              <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
+              <button class="govuk-button" data-module="govuk-button">Continue</button>
             </form>
 
       </div>
