--- a/app/views/slurrystorage/current/standardised-grant-amounts.html
+++ b/app/views/slurrystorage/current/standardised-grant-amounts.html
@@ -28,7 +28,7 @@ Standardised costs
         <p class="govuk-body">The Slurry Infrastructure Grant uses standardised grant amounts for the eligible items. </p>
 
 
-        
+
 
 
         {{ govukTable({
@@ -190,7 +190,7 @@ Standardised costs
           ],
           [
             {
-            html: "Powered take off (PTO) hydraulically <br>powered slurry transfer pump "
+            html: "Powered take off (PTO) or hydraulically<br>driven chopper pump"
             },
             {
             html: "£950 per pump"
@@ -310,7 +310,7 @@ Standardised costs
           ],
           [
             {
-            html: "SSlurry store wall mixers with store <br>capacity up to 8,000 cubic metres"
+            html: "Slurry store wall mixers with store <br>capacity up to 8,000 cubic metres"
             },
             {
             html: "£1,000 per tank"
