--- a/app/views/water/current/irrigated-crops.html
+++ b/app/views/water/current/irrigated-crops.html
@@ -39,7 +39,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="irrigated-crops-2" name="irrigated-crops" type="radio" value="protected cropping" {{ checked("irrigated-crops", "protected cropping") }}>
                 <label class="govuk-label govuk-radios__label" for="irrigated-crops-2">
-                  Protected cropping (for example glasshouse, poly tunnel)
+                  Protected cropping (for example glasshouse or poly tunnel)
                 </label>
               </div>
               <div class="govuk-radios__item">
