--- a/app/views/water/current/irrigated-land-no.html
+++ b/app/views/water/current/irrigated-land-no.html
@@ -29,7 +29,7 @@
                 </h1>
                 <div class="govuk-body govuk-!-margin-bottom-0">
                   <p id="irrigated-land-target-hint" class="govuk-hint">
-                    Enter figure in hectares, for example 543.5
+                    Enter figure in hectares (ha), for example 543.5
                   </p>
                 </div>
                 <div class="govuk-input__wrapper govuk-!-margin-bottom-5">
