--- a/app/views/water/current/irrigated-land.html
+++ b/app/views/water/current/irrigated-land.html
@@ -30,7 +30,7 @@
               </h2>
               </legend>
                 <div id="irrigated-land" class="govuk-hint">
-                  Enter figure in hectares, for example 543.5
+                  Enter figure in hectares (ha), for example 543.5
                 </div>
 
                 <div class="govuk-input__wrapper govuk-!-margin-bottom-8">
@@ -47,7 +47,7 @@
                       </h2>
                       </legend>
                         <div id="irrigated-land" class="govuk-hint">
-                          Enter figure in hectares, for example 543.5
+                          Enter figure in hectares (ha), for example 543.5
                         </div>
 
                         <div class="govuk-input__wrapper govuk-!-margin-bottom-7">
