--- a/app/views/water/current/irrigation-systems.html
+++ b/app/views/water/current/irrigation-systems.html
@@ -35,15 +35,15 @@
             Select up to 2 options</div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-current-1" name="irrigation-systems-current" type="checkbox" value="Trickle" {{ checked("irrigation-systems-current", "Trickle") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-current-1" name="irrigation-systems-current" type="checkbox" value="Boom" {{ checked("irrigation-systems-current", "Boom") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-1">
-                  Trickle
+                  Boom
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-current-2" name="irrigation-systems-current" type="checkbox" value="Boom irrigator" {{ checked("irrigation-systems-current", "Boom irrigator") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-current-2" name="irrigation-systems-current" type="checkbox" value="Capillary Bed" {{ checked("irrigation-systems-current", "Capillary Bed") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-2">
-                  Boom irrigator
+                  Capillary Bed
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
@@ -53,27 +53,27 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-current-4" name="irrigation-systems-current" type="checkbox" value="Capillary bed" {{ checked("irrigation-systems-current", "Capillary bed") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-current-4" name="irrigation-systems-current" type="checkbox" value="Mist" {{ checked("irrigation-systems-current", "Mist") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-4">
-                  Capillary bed
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-current-5" name="irrigation-systems-current" type="checkbox" value="Sprinklers" {{ checked("irrigation-systems-current", "Sprinklers") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-5">
-                  Sprinklers
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-current-6" name="irrigation-systems-current" type="checkbox" value="Mist" {{ checked("irrigation-systems-current", "Mist") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-6">
                   Mist
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-current-7" name="irrigation-systems-current" type="checkbox" value="Rain gun" {{ checked("irrigation-systems-current", "Rain gun") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-7">
+                <input class="govuk-checkboxes__input" id="irrigation-systems-current-5" name="irrigation-systems-current" type="checkbox" value="Rain gun" {{ checked("irrigation-systems-current", "Rain gun") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-5">
                   Rain gun
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-systems-current-6" name="irrigation-systems-current" type="checkbox" value="Sprinklers" {{ checked("irrigation-systems-current", "Sprinklers") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-6">
+                  Sprinklers
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-systems-current-7" name="irrigation-systems-current" type="checkbox" value="Trickle" {{ checked("irrigation-systems-current", "Trickle") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-7">
+                  Trickle
                 </label>
               </div>
             </div>
@@ -93,15 +93,15 @@
               Select one or two options</div>
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-1" name="irrigation-systems-target" type="checkbox" value="Trickle" {{ checked("irrigation-systems-target", "Trickle") }}>
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-1" name="irrigation-systems-target" type="checkbox" value="Boom" {{ checked("irrigation-systems-target", "Boom") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-1">
-                    Trickle
+                    Boom
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-2" name="irrigation-systems-target" type="checkbox" value="Boom irrigator" {{ checked("irrigation-systems-target", "Boom irrigator") }}>
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-2" name="irrigation-systems-target" type="checkbox" value="Capillary Bed" {{ checked("irrigation-systems-target", "Capillary Bed") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-2">
-                    Boom irrigator
+                    Capillary Bed
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
@@ -111,27 +111,27 @@
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-4" name="irrigation-systems-target" type="checkbox" value="Capillary bed" {{ checked("irrigation-systems-target", "Capillary bed") }}>
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-4" name="irrigation-systems-target" type="checkbox" value="Mist" {{ checked("irrigation-systems-target", "Mist") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-4">
-                    Capillary bed
-                  </label>
-                </div>
-                <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-5" name="irrigation-systems-target" type="checkbox" value="Sprinklers" {{ checked("irrigation-systems-target", "Sprinklers") }}>
-                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-5">
-                    Sprinklers
-                  </label>
-                </div>
-                <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-6" name="irrigation-systems-target" type="checkbox" value="Mist" {{ checked("irrigation-systems-target", "Mist") }}>
-                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-6">
                     Mist
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-7" name="irrigation-systems-target" type="checkbox" value="Rain gun" {{ checked("irrigation-systems-target", "Rain gun") }}>
-                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-7">
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-5" name="irrigation-systems-target" type="checkbox" value="Rain gun" {{ checked("irrigation-systems-target", "Rain gun") }}>
+                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-5">
                     Rain gun
+                  </label>
+                </div>
+                <div class="govuk-checkboxes__item">
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-6" name="irrigation-systems-target" type="checkbox" value="Sprinkles" {{ checked("irrigation-systems-target", "Sprinkles") }}>
+                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-6">
+                    Sprinkles
+                  </label>
+                </div>
+                <div class="govuk-checkboxes__item">
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-7" name="irrigation-systems-target" type="checkbox" value="Trickle" {{ checked("irrigation-systems-target", "Trickle") }}>
+                  <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-7">
+                    Trickle
                   </label>
                 </div>
               </div>
