--- a/app/views/water/current/irrigation-water-source-no.html
+++ b/app/views/water/current/irrigation-water-source-no.html
@@ -40,7 +40,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="irrigation-target-1" name="irrigation-target-no" type="checkbox" value="Peak flow" {{ checked("irrigation-target-no", "Peak flow") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-1">
-                  Peak-flow surface water
+                  Peak-flow/winter abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
