--- a/app/views/water/current/irrigation-water-source.html
+++ b/app/views/water/current/irrigation-water-source.html
@@ -38,7 +38,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="irrigation-current-1" name="irrigation-current" type="checkbox" value="Peak flow" {{ checked("irrigation-current", "Peak flow") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-1">
-                  Peak-flow surface water
+                  Peak-flow/winter abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
@@ -83,7 +83,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="irrigation-target-1" name="irrigation-target" type="checkbox" value="Peak flow" {{ checked("irrigation-target", "Peak flow") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-1">
-                  Peak-flow surface water
+                  Peak-flow/winter abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
