--- a/app/views/water/current/project-items.html
+++ b/app/views/water/current/project-items.html
@@ -27,7 +27,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="project-items-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Which eligible items does your project need?
+                What eligible items do you need for your project?
               </h1>
             </legend>
             <br>
@@ -76,7 +76,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="project-items-9" name="project-items" type="checkbox" value="irrigation pump and controls" {{ checked("project-items", "irrigation pump and controls") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items-9">
-                  Irrigation pump(s) and controls
+                  Irrigation pumps and controls
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
@@ -158,7 +158,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="Technology-2" name="Technology" type="checkbox" value="software and sensors" {{ checked("Technology", "software and sensors") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="Technology-2">
-                  Equipment such as sensors to optimise water application 
+                  Equipment such as sensors to optimise water application
                 </label>
               </div>
             </div>
