--- a/app/views/water/current/start.html
+++ b/app/views/water/current/start.html
@@ -66,11 +66,11 @@
         <li>estimated total cost of the items you need</li>
       </ul>
       <p class="govuk-body govuk-!-margin-bottom-8">If you do not enter any information for more than 20 minutes, your
-application will time out and you  will have to start again. </p>
+application will time out and you will have to start again. </p>
     </div>
     <div class="govuk-body">
       <h3 class="govuk-heading-m govuk-!-margin-top-2">Problems using the online service</h3>
-      <p class="govuk-body">If you have any problems using the online  service, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
+      <p class="govuk-body">If you have any problems with the service, contact the RPA.</p>
       <h3 class="govuk-heading-s">Telephone</h3>
 
       <ul class="govuk-list">
