--- a/app/views/water/current/project-cost.html
+++ b/app/views/water/current/project-cost.html
@@ -32,8 +32,8 @@ Do not include VAT
 
           </div>
 
-          <span class="govuk-caption-m">Enter amount, for example 95,000</span>
-          <div class="govuk-input__wrapper govuk-!-margin-top-4">
+          <span class="govuk-caption-m govuk-!-margin-top-4">Enter amount, for example 95,000</span>
+          <div class="govuk-input__wrapper govuk-!-margin-top-2">
           <span  class="govuk-input__prefix" aria-hidden="true">£</span>
           <input class="govuk-input govuk-!-width-one-quarter" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
 
