--- a/app/views/water/current/abstraction-required-condition.html
+++ b/app/views/water/current/abstraction-required-condition.html
@@ -24,7 +24,7 @@
         <h1 class="govuk-heading-l">
           You may be able to apply for this grant
         </h1>
-        <p>Any abstraction licences or variations must be in place by 31 January 2023 (the end of the application window).</p>
+        <p>Any abstraction licences or variations must be in place by 31 January 2023.</p>
 
         {{ govukInsetText({
           text: "If you have already applied for an abstraction licence or variation and expect to get it by then, you can submit a full application."
