--- a/app/views/water/current/answers.html
+++ b/app/views/water/current/answers.html
@@ -67,8 +67,6 @@
       The likelihood of a full application being successful will also depend on the number and value of applications we receive.
     </strong>
   </div>
-      <p class="govuk-body">Value for money will be assessed alongside the funding priorities at full application stage and this may impact your overall project score.</p>
-
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
       <h1 class="govuk-heading-l">Your answers</h1>
       <p class="govuk-!-padding-bottom-4">You can go back to change scoring questions as many times as you like but you can only submit your details once.</p>
@@ -78,7 +76,7 @@
             <th scope="col" class="govuk-table__header">Answers</th>
             <th scope="col" class="govuk-table__header">Score</th>
             <th scope="col" class="govuk-table__header">Funding priorities</th>
-            <th scope="col" class="govuk-table__header">Change</th>
+            <th scope="col" class="govuk-table__header">Change answers</th>
           </tr>
         </thead>
 
@@ -252,7 +250,7 @@
     <h2 class="govuk-heading-m">Next steps</h2>
     <p class="govuk-body">Next, add your business and contact details and submit them to the RPA (you should only do this once).</p>
     <p>You’ll get an email with your score and answers, and a reference number.</p>
-    
+
 
 
     <div class="govuk-grid-row">
