--- a/app/views/water/current/collaboration.html
+++ b/app/views/water/current/collaboration.html
@@ -29,7 +29,7 @@
               <h1 class="govuk-fieldset__heading">
                 Will water be supplied to other farms?
               </h1>
-              <h3 class="govuk-caption-m">If you intend to supply water via a water sharing agreement<br> as a result of this project.</h3>
+              <h3 class="govuk-caption-m">For example, if you intend to supply water via a water sharing agreement as a result of this project.</h3>
             </legend>
 
             <div class="govuk-radios govuk-radios--inline">
