--- a/app/views/water/current/country-fail.html
+++ b/app/views/water/current/country-fail.html
@@ -19,7 +19,10 @@
 
       <p>This grant is only for projects in England.</p>
 
-      <p>Scotland, Wales and Northern Ireland have other grants available.</p>
+      {{ govukInsetText({
+        text: "Scotland, Wales and Northern Ireland have other grants available."
+      }) }}
+
 
       <!--See the <a href="">large countryside productivity grant guidance</a> for further information.</p>-->
 
