--- a/app/views/ahw/current/consent.html
+++ b/app/views/ahw/current/consent.html
@@ -30,10 +30,8 @@
             <ul class="govuk-list govuk-list--bullet">
 
               <li>checked by the RPA</li>
-              <li>passed to Natural England so they can contact me to provide advice on my project</li>
-              <li>passed to the Environment Agency so that they are aware of my planned project</li>
+              <li>shared with the Environment Agency so that they can check the details of my planned project</li>
             </ul>
-            <p class="govuk-body">I am aware that if my project is successful, details of my full application will be shared with the Environment Agency so they can provide assurance on the project location and store design.</p>
             <p class="govuk-body">I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application. </p>
 
             <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-2">So that we can continue to improve our services and schemes, we may wish to contact you in the future. Please confirm if you are happy for us, or a third-party working for us, to contact you. </p>
@@ -41,7 +39,7 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
                 <label class="govuk-label govuk-checkboxes__label" for="confirm">
-                (Optional) I consent to being contacted about improvement services 
+                (Optional) I consent to being contacted about improving services 
                 </label>
               </div>
             </div>
