--- a/app/views/ahw/current/reference-number.html
+++ b/app/views/ahw/current/reference-number.html
@@ -23,7 +23,7 @@
         Details submitted
        </h1>
     <div class="govuk-panel__body">
-      Your reference number<br><strong>SI-VMA-A54</strong>
+      Your reference number<br><strong>AHW-VMA-A54</strong>
     </div>
    </div>
 
@@ -52,7 +52,7 @@
 <p class="govuk-heading-m">What happens next</p>
 <ol class="govuk-list govuk-list--number govuk-list--spaced">
   <li>RPA will be in touch when the full application period opens to tell you if your project is invited to submit a full application form.</li>
-  <li>If you submit an application, RPA will assess whether it is eligible and meets the rules of the grant.</li>
+  <li>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</li>
   <li>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</li>
 </ol>
 
