--- a/app/views/ahw/current/business.html
+++ b/app/views/ahw/current/business.html
@@ -32,7 +32,7 @@
           <label class="govuk-label" for="project-name">
               Project name
           </label>
-          <span id="project-name-hint" class="govuk-hint">For example, Browns Hill Farm calf housing project</span>
+          <div class="govuk-hint">For example, Browns Hill Farm calf housing project</div>
           <input class="govuk-input" id="project-name" name="project-name" type="text" value="{{ data['project-name'] }}">
         </div>
 
@@ -40,7 +40,7 @@
           <label class="govuk-label" for="business-name">
               Business name
           </label>
-          <span id="business-name-hint" class="govuk-hint">If you’re registered on the Rural Payments system, enter business name as registered</span>
+          <div class="govuk-hint">If you’re registered on the Rural Payments system, enter business name as registered</div>
           <input class="govuk-input" id="business-name" name="business-name" type="text" value="{{ data['business-name'] }}">
         </div>
 
@@ -48,10 +48,10 @@
           <label class="govuk-label" for="employees">
               Number of employees
           </label>
-          <span id="employees-hint" class="govuk-hint">Full-time employees, including the owner</span>
+          <div class="govuk-hint">Full-time employees, including the owner</div>
           <input class="govuk-input govuk-input--width-4" id="employees" name="employees" type="text" spellcheck="false" aria-describedby="employees-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['employees'] }}">
         </div>
-        <br>
+
         <div class="govuk-form-group">
           <label class="govuk-label" for="turnover">
               Business turnover (£)
@@ -61,7 +61,7 @@
           <input class="govuk-input govuk-!-width-one-third" id="turnover" name="turnover" type="text" spellcheck="false" aria-describedby="turnover-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['turnover'] }}">
           </div>
         </div>
-        <br>
+
              <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" aria-describedby="sbi-hint">
                      <legend class="govuk-fieldset__legend">
@@ -78,7 +78,7 @@
                      </div>
 
              </div>
-    <br><br>
+    
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
         </button>
