GRANTS-1059, GRANTS-1023, GRANTS-1024

--- a/app/views/ahw/current/start.html
+++ b/app/views/ahw/current/start.html
@@ -40,11 +40,10 @@
           <h2 class="govuk-heading-m">Who can apply</h2>
           <p>You can apply if:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>you are a dairy, beef or pig farmer</li>
-            <li>you have an existing slurry system</li>
-            <li>the slurry store will be in England</li>
+            <li>you are a cattle housing farmer</li>
+
           </ul>
-          <p class="govuk-body">The minimum grant you can claim is £25,000. The maximum grant is £250,000.</p>
+          <p class="govuk-body">The minimum grant you can claim is £X. The maximum grant is £Z.</p>
         </div>
 
       <div class="govuk-inset-text">
@@ -67,8 +66,6 @@
       <p>To  use the checker,  you need:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>information about your business (for example, number of employees and turnover)</li>
-        <li>information about the project (for example, type of store and capacity, type of cover and size, approximate size and quantity of other items you need, the OS grid reference)</li>
-        <li>a list of the items you’d like to buy for the project</li>
         <li>information about your planning permission</li>
         </ul>
       <p class="govuk-body govuk-!-margin-bottom-8">If you do not enter any information for more than 20 minutes, your
