--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -22,7 +22,7 @@
         <p class='govuk-list app-list--definition'>
         <a href='#' class="govuk-link--no-visited-state">Guidance: Upgrading Cattle Housing Grant</a></p>
         <p class='govuk-list app-list--definition'>
-        <a href='#' class="govuk-link--no-visited-state">Start page</a><br>
+        <a href='ahw/current/start' class="govuk-link--no-visited-state">Start page</a><br>
         Specialist start page, hosted on GOV.UK</p>
 
         <p class='govuk-list app-list--definition'>
@@ -34,9 +34,9 @@
         <h2 class="govuk-heading-l">Design history</h2>
 
         <p class='govuk-list app-list--definition'>
-          <a href='ahw/current/legal-status' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
+          <a href='ahw/current/start' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
           User journey currently in build, however 'User and business details' section exists. This prototype has not been tested yet. <br>
-            <span class="govuk-body govuk-!-font-size-14">#Last updated on 2 November 2022<br/>
+            <span class="govuk-body govuk-!-font-size-14">#Last updated on 4 November 2022<br/>
             </span></p>
 
 
