--- a/app/views/water/current/irrigation-system.html
+++ b/app/views/water/current/irrigation-system.html
@@ -22,8 +22,8 @@
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-          <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-padding-top-2">
+
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
                 What systems will be used to irrigate?
               </h1>
@@ -32,8 +32,8 @@
 
 
 
-            <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-1">
-               <span class="govuk-caption-m">Select one or two options</span>
+            <div class="govuk-body">
+               <span class="govuk-caption-m">Select up to 2 options</span>
               <br>
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
@@ -80,9 +80,9 @@
                 </div>
               </div>
             </div>
-          </fieldset>
 
-<br>
+
+
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
         </button>
@@ -100,11 +100,7 @@
       <aside class="app-related-items">
         <h3 class="govuk-heading-s"> Funding  priorities</h3>
         <div class="govuk-body govuk-!-font-size-19">
-            RPA wants to fund projects that:
-              <ul>
-                <li>improve the environment</li>
-                <li>improve water sustainability</li>
-               </ul>
+            RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones, for example moving from rain gun to trickle.
         </div>
       </aside>
     </div>
